# org.eclipse.atl.reactive.haskell_semantics

./: ATLHaskellSemantics.cabal
ATLSemantics/: .project  ATLSemantics.cabal
ATLSemantics/src/: Main.hs  Main1.hs  Strict.hs
src/: Example.hs  Lazy.hs  Main.hs  NoClassType.hs  QuickChecker.hs  Reactive.hs  Remi1.hs  Remi2.hs  Semantics.hs  Strict.hs  WithModels.hs
src/alt/: Concrete.hs  Reactive.hs  StartingFromTarget.hs
