name:                 ATLHaskellSemantics
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Massimo Tisi
maintainer:           massimo.tisi@mines-nantes.fr
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable ATLHaskellSemantics
  main-is:              Main.hs
  other-modules:        Semantics
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, QuickCheck
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall